:dog: New pages

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = '/'
-title = 'Formulir Online GBIJPPM'
+title = 'Formulir Digital GBIPP'
 assetDir = "assets"
 timeZone = "Asia/Makassar"
 
